--- a/monitors/prometheus.yml
+++ b/monitors/prometheus.yml
@@ -1,11 +1,17 @@
-# my global config
 global:
-  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 10s
+  scrape_timeout: 10s
+  evaluation_interval: 10s
 
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+rule_files: ["rules/*.yml"]
+
+alerting:
+  alertmanagers:
+    - timeout: "10s"
+      scheme: http
+      static_configs:
+        - targets: ["alertmanager:9093"]
+
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
@@ -14,9 +20,17 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: "kafka"
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    scheme: http
     static_configs:
       - targets:
         - jmx-exporter-broker:5556
         - jmx-exporter-controller:5556
         - kafka-exporter:9308
         - kafka-minion:8080
+        - broker-1:9200
+        - broker-2:9200
+        - broker-3:9200
+        - broker-4:9200
+        - broker-5:9200
