--- a/monitors/docker-compose.yml
+++ b/monitors/docker-compose.yml
@@ -1,5 +1,28 @@
 services:
-# Confluent Platform
+# ========================= kafka-ui =========================
+  kafka-ui:
+    image: provectuslabs/kafka-ui:v0.7.2
+    container_name: kafka-ui
+    profiles:
+      - all
+      - kafka-ui
+    ports:
+      - 8080:8080
+    depends_on:
+      - schema-registry
+      - kafka-connect
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker-1:9092,broker-2:9092,broker-3:9092,broker-4:9092,broker-5:9092
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9101
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8081
+      KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: first
+      KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://kafka-connect:8083
+      DYNAMIC_CONFIG_ENABLED: 'true'
+    networks:
+      - monitoring
+
+# ========================= Confluent Platform =========================
   control-center:
     image: confluentinc/cp-enterprise-control-center:7.7.0
     container_name: control-center
@@ -42,7 +65,7 @@ services:
       SCHEMA_REGISTRY_AVRO_COMPATIBILY_LEVEL: full
       SCHEMA_REGISTRY_DEBUG: true
     volumes:
-      - .data/schema-registry:/bitnami/schema-registry
+      - .data/schema-registry:/bitnami
     networks:
       - monitoring
 
@@ -80,6 +103,7 @@ services:
     networks:
       - monitoring
 
+# ========================= Prometeus & Grafana =========================
   kafka-exporter:
     image: bitnami/kafka-exporter:1.7.0
     container_name: kafka-exporter
@@ -176,28 +200,22 @@ services:
       - prometheus
     volumes:
       - ./.grafana-storage:/var/lib/grafana
+      #  - ./grafana/provisioning:/etc/grafana/provisioning
     networks:
       - monitoring
 
-  kafka-ui:
-    image: provectuslabs/kafka-ui:v0.7.2
-    container_name: kafka-ui
+  alertmanager:
+    image: bitnami/alertmanager:0.27.0
+    user: root
+    container_name: alertmanager
     profiles:
       - all
-      - kafka-ui
+      - grafana 
     ports:
-      - 8080:8080
-    depends_on:
-      - schema-registry
-      - kafka-connect
-    environment:
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker-1:9092,broker-2:9092,broker-3:9092,broker-4:9092,broker-5:9092
-      KAFKA_CLUSTERS_0_METRICS_PORT: 9101
-      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8081
-      KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: first
-      KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://kafka-connect:8083
-      DYNAMIC_CONFIG_ENABLED: 'true'
+      - 19093:9093
+    volumes:
+      - .data/alertmanager:/opt/bitnami/alertmanager/data
+      # - /path/to/config.yml:/opt/bitnami/alertmanager/conf/config.yml
     networks:
       - monitoring
 
