disable JMX for KRAF

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CONTROLLER_QUORUM_VOTERS: 10001@controller-1:9093,10002@controller-2:9093,10003@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      JMX_PORT: 9101
-      KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
+      # JMX_PORT: 9101
+      # KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
     volumes:
       - ./.data/controller-1:/var/lib/kafka/data
       - ../jmx-exporter:/usr/share/jmx_exporter
@@ -51,7 +51,7 @@ services:
       KAFKA_ACKS: all
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
-      JMX_PORT: 9101
+      # JMX_PORT: 9101
       KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kafka-broker.yml
     depends_on:
       - controller-1
@@ -89,7 +89,7 @@ services:
       KAFKA_ACKS: all
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
-      JMX_PORT: 9101
+      # JMX_PORT: 9101
       KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kafka-broker.yml
     depends_on:
       - controller-1
@@ -115,8 +115,8 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CONTROLLER_QUORUM_VOTERS: 10001@controller-1:9093,10002@controller-2:9093,10003@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      JMX_PORT: 9101
-      KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
+      # JMX_PORT: 9101
+      # KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
     volumes:
       - ./.data/controller-2:/var/lib/kafka/data
       - ../jmx-exporter:/usr/share/jmx_exporter
@@ -151,7 +151,7 @@ services:
       KAFKA_ACKS: all
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
-      JMX_PORT: 9101
+      # JMX_PORT: 9101
       KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kafka-broker.yml
     depends_on:
       - controller-2
@@ -189,7 +189,7 @@ services:
       KAFKA_ACKS: all
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
-      JMX_PORT: 9101
+      # JMX_PORT: 9101
       KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kafka-broker.yml
     depends_on:
       - controller-2
@@ -216,8 +216,8 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CONTROLLER_QUORUM_VOTERS: 10001@controller-1:9093,10002@controller-2:9093,10003@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      JMX_PORT: 9101
-      KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
+      # JMX_PORT: 9101
+      # KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kraft-controller.yml
     volumes:
       - ./.data/controller-3:/var/lib/kafka/data
       - ../jmx-exporter:/usr/share/jmx_exporter
@@ -252,7 +252,7 @@ services:
       KAFKA_ACKS: all
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
-      JMX_PORT: 9101
+      # JMX_PORT: 9101
       KAFKA_OPTS: -javaagent:/usr/share/jmx_exporter/jmx_prometheus_javaagent-1.0.1.jar=9200:/usr/share/jmx_exporter/kafka-broker.yml
     depends_on:
       - controller-3
