--- a/monitors/prometheus.yml
+++ b/monitors/prometheus.yml
@@ -27,8 +27,8 @@ scrape_configs:
       - targets:
         # - jmx-exporter-broker:5556
         # - jmx-exporter-controller:5556
-        - kafka-exporter:9308
-        - kafka-minion:8080
+        # - kafka-exporter:9308
+        # - kafka-minion:8080
         - broker-1:9200
         - broker-2:9200
         - broker-3:9200
