adjust acks value

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 5
       KAFKA_MIN_INSYNC_REPLICAS: 2
-      KAFKA_ACKS: all
+      KAFKA_ACKS: 2
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       JMX_PORT: 9101
@@ -85,7 +85,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 5
       KAFKA_MIN_INSYNC_REPLICAS: 2
-      KAFKA_ACKS: all
+      KAFKA_ACKS: 2 
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       JMX_PORT: 9101
@@ -146,7 +146,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 5
       KAFKA_MIN_INSYNC_REPLICAS: 2
-      KAFKA_ACKS: all
+      KAFKA_ACKS: 2 
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       JMX_PORT: 9101
@@ -184,7 +184,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 5
       KAFKA_MIN_INSYNC_REPLICAS: 2
-      KAFKA_ACKS: all
+      KAFKA_ACKS: 2 
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       JMX_PORT: 9101
@@ -246,7 +246,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 5
       KAFKA_MIN_INSYNC_REPLICAS: 2
-      KAFKA_ACKS: all
+      KAFKA_ACKS: 2 
       KAFKA_FLUSH_MESSAGES: 100000 
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       JMX_PORT: 9101
