--- a/kafka/zookeeper/docker-compose.yaml
+++ b/kafka/zookeeper/docker-compose.yaml
@@ -31,14 +31,14 @@ services:
       KAFKA_CFG_LISTENERS: 'PLAINTEXT://:9092,PLAINTEXT_HOST://:19092'
       KAFKA_CFG_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-1:9092,PLAINTEXT_HOST://localhost:19092'
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      # KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_CFG_ZOOKEEPER_CONNECT: controller-1:2181,controller-2:2181,controller-3:2181
-      # KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
-      # KAFKA_CFG_ACKS: all
-      # KAFKA_CFG_FLUSH_MESSAGES: 100000 
+      KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
+      KAFKA_CFG_ACKS: all
+      KAFKA_CFG_FLUSH_MESSAGES: 100000 
       KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: false
       KAFKA_ZOOKEEPER_PROTOCOL: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: yes
@@ -83,14 +83,14 @@ services:
       KAFKA_CFG_LISTENERS: 'PLAINTEXT://:9092,PLAINTEXT_HOST://:29092'
       KAFKA_CFG_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-2:9092,PLAINTEXT_HOST://localhost:29092'
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      # KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_CFG_ZOOKEEPER_CONNECT: controller-1:2181,controller-2:2181,controller-3:2181
-      # KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
-      # KAFKA_CFG_ACKS: all
-      # KAFKA_CFG_FLUSH_MESSAGES: 100000 
+      KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
+      KAFKA_CFG_ACKS: all
+      KAFKA_CFG_FLUSH_MESSAGES: 100000 
       KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: false
       KAFKA_ZOOKEEPER_PROTOCOL: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: yes
@@ -136,14 +136,14 @@ services:
       KAFKA_CFG_LISTENERS: 'PLAINTEXT://:9092,PLAINTEXT_HOST://:39092'
       KAFKA_CFG_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:9092,PLAINTEXT_HOST://localhost:39092'
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      # KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_CFG_ZOOKEEPER_CONNECT: controller-1:2181,controller-2:2181,controller-3:2181
-      # KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
-      # KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
-      # KAFKA_CFG_ACKS: all
-      # KAFKA_CFG_FLUSH_MESSAGES: 100000 
+      KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
+      KAFKA_CFG_ACKS: all
+      KAFKA_CFG_FLUSH_MESSAGES: 100000 
       KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: false
       KAFKA_ZOOKEEPER_PROTOCOL: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: yes
